# Clane

./: .gitignore  Clang环境准备.pages  README.md  使用Xcode开发iOS语法检查的Clang插件.html
ClaneTestDemo/ClaneTestDemo/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m  testClass.h  testClass.m
ClaneTestDemo/ClaneTestDemo.xcodeproj/: project.pbxproj
ClaneTestDemo/ClaneTestDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ClaneTestDemo/ClaneTestDemo.xcodeproj/project.xcworkspace/xcuserdata/max.xcuserdatad/: UserInterfaceState.xcuserstate
ClaneTestDemo/ClaneTestDemo.xcodeproj/xcuserdata/max.xcuserdatad/xcschemes/: ClaneTestDemo.xcscheme  xcschememanagement.plist
clang-800.0.42.1/src/tools/clang/examples/: CMakeLists.txt
clang-800.0.42.1/src/tools/clang/examples/MobPlugin/: CMakeLists.txt  MobPlugin.cpp
clang-800.0.42.1/src/tools/clang/examples/MyPluginTooling/: CMakeLists.txt  MyPluginTooling.cpp
